k8s/base/platform/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: currency-app-a
  labels:
    kubernetes.io/metadata.name: currency-app-a
    app.kubernetes.io/part-of: currency-rates
    app.kubernetes.io/managed-by: platform-team
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: currency-observability
  labels:
    kubernetes.io/metadata.name: currency-observability
    app.kubernetes.io/part-of: currency-rates
    app.kubernetes.io/managed-by: platform-team
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: currency-app-b
  labels:
    kubernetes.io/metadata.name: currency-app-b
    app.kubernetes.io/part-of: currency-rates
    app.kubernetes.io/managed-by: platform-team
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
