k8s/base/platform/app-a-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-a-gateway
  namespace: currency-app-a
spec:
  type: ClusterIP
  selector:
    app: app-a-gateway
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
