k8s/base/platform/app-b-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-b-engine
  namespace: currency-app-b
  annotations:
    cloud.google.com/neg: '{"ingress": false}'
spec:
  type: ClusterIP
  selector:
    app: app-b-engine
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
